@@ -1,3 +1,4 @@
+package ejercicio5;
 
 
 import java.io.BufferedReader;
@@ -11,13 +12,12 @@ public class ProcessComunication {
 	public static void main(String[] args) throws IOException {
 		// TODO Auto-generated method stub
 		
-		Process process = new ProcessBuilder(args).start();
-		InputStream is = process.getInputStream();
+		Process process = Runtime.getRuntime().exec("javac -cp src src/ejercicio5/Hija.java");
+		Process pr = Runtime.getRuntime().exec("java -cp src ejercicio5/Hija");
+		InputStream is = pr.getInputStream();
 		InputStreamReader isr = new InputStreamReader(is);
 		BufferedReader br = new BufferedReader(isr);
 		String line;
-		
-		System.out.println("Salida del proceso "+ Arrays.toString(args)+":");
 		
 		while((line = br.readLine()) !=null) {
 			System.out.println(line);
